--- a/tactics.html
+++ b/tactics.html
@@ -14,9 +14,9 @@
 <body>
   <div class="container-fluid">
     <div class="game col-12">
-      <div class="boardContainer">
+      <div class="mapContainer">
         <!-- grid is created and appended to table -->
-        <table class="board">
+        <table class="map">
         </table>
       </div>
       <div class="guiContainer"></div>
